# HUD

./: CMakeLists.txt  Main.qml  Main.qml.autosave  Main1.qml  main.cpp  mqttmanager.cpp  mqttmanager.h
